# SP

./: .project  Makefile  SP4.cabal  en.compound  sp.cabal  sp.conf
src/: Main.hs  Makefile  SP.hs
src/SP/: Bootstrapper.hs  ByteString.hs  Cluster.hs  Config.hs  Debug.hs  DeepSeq.hs  Math.hs  Merge.hs  Print.hs  Redirect.hs  Score.hs  Serialization.hs  Syntax.hs
src/SP/Boot/: MongoDB.hs  Preprocess.hs  SchmittTrigger.hs  Sentence.hs
src/SP/Bootstrap/: Mongo.hs  MongoDB.hs
src/SP/Composition/: Common.hs  Ner.hs  Regex.hs
src/SP/Execution/: Abstraction.hs  Executor.hs  Flip.hs  Isa.hs  Merger.hs  Redirect.hs  Update.hs
src/SP/Preprocess/: ArticleCleaner.hs  Compound.hs  PosCompound.hs  Preprocess.hs  RegexCompound.hs  RegexCompoundConversion.hs
src/SP/Reduction/: Abstraction.hs  Isa.hs  Merger.hs  Reducer.hs  Turnable.hs  Update.hs
src/SP/Score/: Argument.hs  IsaScorer.hs  MaeIsaScorer.hs  Math.hs  Object.hs  Score.hs  Scorer.hs
src/SP/Scoring/: Argument.hs  Hyponymy.hs  Part.hs  Score.hs  Scorer.hs  UnqualifiedSet.hs
tests/: AllTests.hs  Constructors.hs
