name:           SP4
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         oa

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   mtl,
                   mongoDB,
                   parallel,
                   bytestring,
                   bson,
                   list-extras,
                   hashable,
                   unordered-containers,
                   array,
                   deepseq,
                   regex-compat,
                   ConfigFile,
                   MissingH,
                   containers,
                   text,
                   regex-tdfa,
                   regex-base
  ghc-options:     -Wall
  exposed-modules:  
                   SP.Boot.MongoDB,
                   SP.Boot.Preprocess,
                   SP.Boot.SchmittTrigger,
                   SP.Boot.Sentence,
                   SP.Boot.Trim,
                   SP.Cluster,
                   SP.Composition.Common,
                   SP.Composition.Ner,
                   SP.Composition.Regex,
                   SP.Config,
                   SP.Math,
                   SP.Reduction.Abstraction,
                   SP.Reduction.Isa,
                   SP.Reduction.Merger,
                   SP.Reduction.Reducer,
                   SP.Reduction.Turnable,
                   SP.Reduction.Update,
                   SP.Scoring.Argument,
                   SP.Scoring.Hyponymy,
                   SP.Scoring.Part,
                   SP.Scoring.Score,
                   SP.Scoring.Scorer,
                   SP.Scoring.UnqualifiedSet,
                   SP.Trace

executable SP4
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl,
                   mongoDB,
                   parallel,
                   bytestring,
                   bson,
                   list-extras,
                   hashable,
                   unordered-containers,
                   array,
                   deepseq,
                   regex-compat,
                   ConfigFile,
                   MissingH,
                   containers,
                   text,
                   regex-tdfa,
                   regex-base
  ghc-options:     -Wall -threaded -rtsopts=all
  other-modules:   
                   SP.Boot.MongoDB,
                   SP.Boot.Preprocess,
                   SP.Boot.SchmittTrigger,
                   SP.Boot.Sentence,
                   SP.Boot.Trim,
                   SP.Cluster,
                   SP.Composition.Common,
                   SP.Composition.Ner,
                   SP.Composition.Regex,
                   SP.Config,
                   SP.Math,
                   SP.Reduction.Abstraction,
                   SP.Reduction.Isa,
                   SP.Reduction.Merger,
                   SP.Reduction.Reducer,
                   SP.Reduction.Turnable,
                   SP.Reduction.Update,
                   SP.Scoring.Argument,
                   SP.Scoring.Hyponymy,
                   SP.Scoring.Part,
                   SP.Scoring.Score,
                   SP.Scoring.Scorer,
                   SP.Scoring.UnqualifiedSet,
                   SP.Trace

test-suite SimpleMerge
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   SP4,
                   bytestring,
                   hashable,
                   mongoDB,
                   unordered-containers
  hs-source-dirs:  tests
  ghc-options:     -Wall -rtsopts
  main-is:         AllTests.hs
  other-modules:   Constructors

