Name:                sp
Version:             0.0
Description:         Semantic Parser
License:             GPL
License-file:        LICENSE
Author:              Oscar Sjöberg
Maintainer:          osorbor@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

library
  Build-Depends:     base >= 4, mtl, mongoDB, parallel
  Exposed-Modules:   SP.Cluster, SP.Score
  HS-Source-Dirs:    src

Executable sp
  Main-is:           SP.hs
  Build-Depends:     base >= 4, mtl, mongoDB, parallel
  HS-Source-Dirs:    src
