Name:                sp
Version:             0.0
Description:         Semantic Parser
License:             GPL
License-file:        LICENSE
Author:              Oscar Sjöberg
Maintainer:          osorbor@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.9.2

Library
  Build-Depends:     base >= 4, mtl, mongoDB, parallel, bytestring, bson,
                     list-extras, hashable, unordered-containers, array, 
                     deepseq, regex-compat, MissingH, ConfigFile, containers,
                     text, stream-fusion, regex-tdfa, regex-base
  Exposed-Modules:   SP.Cluster, SP.Score.Score, SP.Preprocess.Preprocess
                     SP.ByteString, SP.DeepSeq, SP.Preprocess.Compound,
                     SP.Redirect, SP.Config, SP.Bootstrap.MongoDB,
                     SP.Score.Scorer, SP.Score.Argument, SP.Score.Object,
                     SP.Score.Math, SP.Merge, SP.Preprocess.RegexCompound, 
                     SP.Preprocess.RegexCompoundConversion, 
                     SP.Preprocess.PosCompound
  HS-Source-Dirs:    src
Executable sp
  Build-Depends:     base >= 4, mtl, mongoDB, parallel, bytestring, bson,
                     list-extras, hashable, unordered-containers, array, 
                     deepseq, regex-compat, MissingH, ConfigFile, containers,
                     text, stream-fusion, regex-tdfa, regex-base
  Main-is:           SP.hs
  HS-Source-Dirs:    src

Test-Suite test-sp
  Type:              exitcode-stdio-1.0
  Main-is:           AllTests.hs
  HS-Source-Dirs:    tests
  Build-Depends:     base >= 4, Cabal >= 1.9.2
